--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
@@ -21,15 +21,17 @@
 
     <div class="container">
         <div class="row">
-            <div id="header" class="col-md-12 text-center">
+            <div id="header" class="col text-center">
                 <h1>Train Schedule</h1>
-                <h2>Building a new train schedule</h2>
+                <h2>Check to see when your next train will arrive</h2>
             </div>
         </div>
 
         <div class="row">
             <div id="displayResults" class="col">
-                <h3>Current Train Schedule</h3>
+                <div id="inputDivTitle" class="row">
+                    <h3>Current Train Schedule</h3>
+                </div>
                 <table class="table text-center">
                     <thead>
                         <tr>
@@ -49,7 +51,9 @@
 
         <div class="row">
             <div id="inputDiv" class="col">
-                <h3>Add Train</h3>
+                <div id="inputDivTitle" class="row">
+                    <h3>Add Train</h3>
+                </div>
                 <form>
                     <div class="form-group">
                         <label for="train-time">Train Name</label>
@@ -77,7 +81,7 @@
     </div>
 
 
-<script type="text/javascript" src="assets/script.js"></script>
+    <script type="text/javascript" src="assets/script.js"></script>
 
 </body>
 
